cmake_minimum_required(VERSION 3.21)
project(Minesweeper)
set(CMAKE_CXX_STANDARD 17)
add_executable(Minesweeper src/main.cpp src/Game.cpp src/Board.cpp src/Tile.cpp src/CommonGui.cpp)
set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR c:/SFML/lib/cmake/SFML)
find_package(SFML COMPONENTS system window graphics audio REQUIRED)
include_directories(c:/SFML/include)
target_link_libraries(Minesweeper sfml-system sfml-window sfml-graphics sfml-audio stdc++fs)
